--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 /public/bundles/
 /var/
 /vendor/
+/.env
 ###< symfony/framework-bundle ###
-
 ###> symfony/phpunit-bridge ###
 .phpunit
 .phpunit.result.cache
